# etl-platform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AIRFLOW_CONTROL_PLANE_SUMMARY.md  Dockerfile  README.md  backend_data_quality_agent_prompt.md  data_quality_jira_ticket.md  docker-compose.yml  etl-platform_agent_prompt.md  etl_platform_context_and_goals.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  sample_events.json
.github/: agents.md  copilot-instructions.md
.gitlab/ci/: dag-publish-template.yml
.local/etl-database-schema/: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  release.sh  setup.py
.local/etl-database-schema/etl_database_schema/apps/account/: apps.py  models.py
.local/etl-database-schema/etl_database_schema/apps/account/migrations/: 0001_initial.py
.local/etl-database-schema/etl_database_schema/apps/bms/models/: agency.py  benchmark_access_token.py  config.py  errors.py  field.py  group.py  handler.py  imports.py  integration.py  link.py  migration.py  notification.py  permission.py  rank.py  share.py  snapshot.py  stats_view.py  time_track.py  validation.py  workflow.py
.local/etl-database-schema/etl_database_schema/apps/bms_organization/: managers.py  models.py
.local/etl-database-schema/etl_database_schema/apps/bms_reporting/: models.py
.local/etl-database-schema/etl_database_schema/apps/bms_security/: models.py
ci/: README.md
compose/: README.md  docker-compose.yml
data/: sample_monitoring_file.csv
data/stub/: monitoring_file.sql  monitoring_file_failed_validation.sql  monitoring_file_result.sql  monitoring_file_run.sql  profiling_scenarios.csv  profiling_schema.json
docker/: data-pipeline.Dockerfile  file-processing.Dockerfile  observability.Dockerfile
docs/airflow/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  OPERATIONS.md  QUICKSTART.md  README.md  validate.sh
etl_file_monitoring/: settings.py  urls.py  wsgi.py
example/service/: service_handler.py  urls.py  views.py
example/service/config/: factory.py
example/service/database/: client.py
example/service/processors/: employment_history_processor.py  s3_file_processor.py
example/service/s3/: client.py
example/service/support/: utilities.py
fixtures/: monitoring_seed.json
infra/: README.md
infra/airflow/: README.md
infra/airflow/k8s/: namespaces.yaml
infra/airflow/scripts/: manage.sh
infra/airflow/terraform/: main.tf  providers.tf  variables.tf
infra/airflow_control_plane/: README.md
infra/airflow_control_plane/k8s/: airflow-configmap.yaml  airflow-scheduler-deployment.yaml  airflow-secret.yaml  airflow-webserver-deployment.yaml
infra/airflow_control_plane/scripts/: ecr_put.sh  manage.sh  setup_localstack.sh
infra/data_pipeline/: README.md
infra/file_processing/: README.md  main.tf  providers.tf  terraform.tfvars  variables.tf
infra/file_processing/scripts/: manage.sh  (+11 more)
infra/foundation_network/: README.md  outputs.tf
infra/local/: README.md
infra/observability/: README.md
infra/orchestration/: README.md
infra/pipeline_processing/: README.md
infra/postgres/: README.md
infra/postgres_on_demand/: README.md  main.tf  providers.tf
infra/reporting_seeder/: README.md
infra/terraform/: main.tf
monitoring/: models.py  tests.py
monitoring/services/: ingestion.py  validation.py
scripts/: commands.sh  create_test_run.py  event.json  seed_monitoring_data.py
src/file_monitoring/: __init__.py  api.py  arrival_consumer.py  mock_data.py  models.py  sla.py  stores.py  sweeper.py
tests/: test_sla.py  test_workflow.py
(+70 files in other folders)
